# dual-tech-2026

./: .gitignore  HARDWARE_CHEATSHEET.md  README.md  README_SETUP.md  activate.sh  config_loader.py  cursor-sandbox-apparmor.deb  dual_requirements.txt  fix_shit.sh  main_uav.py  main_ugv.py  models.py  requirements-base.txt  requirements-docker.txt  requirements-ml.txt  requirements.txt  setup_rpi.sh  setup_rpi_claude.sh  setup_rpi_claude_v3.sh  setup_rpi_cluade_v2.sh  test_hardware.py
cli/: dualtech.py
config/: classes.yaml  common.yaml  organizer_ros.yaml  uav.yaml  ugv.yaml
configs/: hw_params.yaml
controllers/: __init__.py
docker/: RPi5.Dockerfile  docker-compose.yml
hal/: base.py  camera.py  factory.py  gpio.py  gps.py  servo.py  stepper.py
localization/: __init__.py  gps.py  pose.py
logging_module/: __init__.py  logger.py
mission/: __init__.py  mission_manager.py  state_machine.py  target_registry.py
monitoring/: health.py
motion/: __init__.py  motion_interface.py
networking/: __init__.py  foxglove_bridge.py  heartbeat.py  video_streamer.py
perception/: __init__.py  camera.py  detector.py  fusion.py  qr_reader.py
research/: 01_research_overview.md  02_ugv_gripper.md  03_uav_gripper.md  04_electronics.md  (+5 more)
ros2_ws/src/dt_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/dt_bringup/config/: organizer_ros.yaml
ros2_ws/src/dt_bringup/dt_bringup/: __init__.py
ros2_ws/src/dt_bringup/launch/: organizer_bridge.launch.py
ros2_ws/src/dt_organizer_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/dt_organizer_bridge/dt_organizer_bridge/: __init__.py  organizer_bridge_node.py
(+39 files in other folders)
